add menubar change template to blue

--- a/_pkgdown.yaml
+++ b/_pkgdown.yaml
@@ -2,7 +2,7 @@ title: indeedKSA
 url: https://github.com/orchid00/jobWordSearch
 template:
   params:
-    bootswatch: flatly
+    bootswatch: cerulean
 navbar:
   type: inverse
   left:
