--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,7 @@ pandoc: 2.1.1
 pkgdown: 1.2.0
 pkgdown_sha: ~
 articles: []
+urls:
+  reference: https://github.com/orchid00/jobWordSearch/reference
+  article: https://github.com/orchid00/jobWordSearch/articles
 
